
	* mail-format.c (write_headers): Oops. This needs to take a
	message argument because we might be writing headers for an
	embedded message/rfc822 subpart rather than the root document.

2000-06-01  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c: Config dialogs are completed.
	(service_acceptable): Fixed a segfault caused by duplicate 
	camel_exception_free()

	* folder-browser-factory.c: Renamed Tool/ menu items
	Vfolder was changed to Virtual Folder and
	Configure Camel Providers was changed to Mail Configuration

2000-06-01  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (evolution_mail_LDADD): Link with
	`libemiscwidgets.a'.

	* mail-display.c (mail_display_new): Use an EScrollFrame instead
	of a GtkScrolledWindow.
	(mail_display_set_message): Likewise.

	* mail-display.h: Replace the GtkScrolledWindow with an
	EScrollFrame.

2000-06-01  Dan Winship  <danw@helixcode.com>

	* component-factory.c (owner_unset_cb): Quit when the shell exits.
	This is a kludge, but a pretty necessary one until the refcounting
	bugs that keep the component from exiting properly are fixed.

2000-05-31  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c: Partially implemented the source
	configuration, seems to segfault due to a destroyed
	gnome dialog being destroyed again in the method
	on_SourceConfigDialogButton_clicked()

2000-05-31  Dan Winship  <danw@helixcode.com>

	* mail-format.c (free_url, handle_text_enriched,
	get_url_for_icon): Fix up memory management of x-evolution-data
	URLs so the URLs and/or their data don't get freed while there are
	still references to them.

	* message-list.c (message_list_init_header): redo the (unused)
	online status column to no longer refer to pixmaps that no longer
	exist.

2000-06-01  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser-factory.c (control_activate): Put the toolbar
	into a frame to make it look like standard GNOME toolbars.  Also,